# claude-priors

./: README.md  install.sh
bootstrap/: CLAUDE.md.snippet
node/: README.md  package.json
node/skill/: SKILL.md
python/: pyproject.toml
python/claude_priors/: __init__.py  cli.py
