[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-priors"
version = "0.1.0"
description = "Persistent agent memory for AI coding assistants"
readme = "../README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["claude", "ai", "agent", "memory", "priors", "coding-assistant"]

[project.scripts]
claude-priors = "claude_priors.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["claude_priors"]

[tool.hatch.build.targets.wheel.force-include]
"../skill/SKILL.md" = "claude_priors/assets/SKILL.md"
"../bootstrap/CLAUDE.md.snippet" = "claude_priors/assets/CLAUDE.md.snippet"
